crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `CCommand`, use a `Connection`.
 */
typedef struct sp_CCommand sp_CCommand;
/**
 * A C-wrapper for grid containing codepage 437 characters.
 *
 * The encoding is currently not enforced.
 */
typedef struct sp_CCp437Grid sp_CCp437Grid;
/**
 * The raw packet. Should probably not be used directly.
 */
typedef struct sp_Packet sp_Packet;
/**
 * A grid of pixels stored in packed bytes.
 */
typedef struct sp_PixelGrid sp_PixelGrid;
/**
 * Represents a span of memory (`&mut [u8]` ) as a struct usable by C code.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - accesses to the memory pointed to with `start` is never accessed outside `length`
 * - the lifetime of the `CByteSlice` does not outlive the memory it points to, as described in
 *   the function returning this type.
 */
typedef struct sp_CByteSlice {
    /**
     * The start address of the memory
     */
    uint8_t *start;
    /**
     * The amount of memory in bytes
     */
    size_t length;
} sp_CByteSlice;
/**
 * Sets the value of all cells in the `Cp437Grid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `value`: the value to set all cells to
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 * - `this` is not written to or read from concurrently
 */
void sp_cp437_grid_fill(struct sp_CCp437Grid *this_, uint8_t value);
/**
 * Gets the height of the `Cp437Grid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 */
size_t sp_cp437_grid_height(const struct sp_CCp437Grid *this_);
/**
 * Sets the value of the specified position in the `Cp437Grid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `x` and `y`: position of the cell
 * - `value`: the value to write to the cell
 *
 * returns: old value of the cell
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `BitVec`
 * - `this` is not written to or read from concurrently
 */
void sp_cp437_grid_set(struct sp_CCp437Grid *this_,
                       size_t x,
                       size_t y,
                       uint8_t value);
/**
 * Gets an unsafe reference to the data of the `Cp437Grid` instance.
 *
 * ## Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 * - the returned memory range is never accessed after the passed `Cp437Grid` has been freed
 * - the returned memory range is never accessed concurrently, either via the `Cp437Grid` or directly
 */
struct sp_CByteSlice sp_cp437_grid_unsafe_data_ref(struct sp_CCp437Grid *this_);
/**
 * Gets the width of the `Cp437Grid` instance.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Cp437Grid`
 */
size_t sp_cp437_grid_width(const struct sp_CCp437Grid *this_);
/**
 * Clones a `Packet`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Packet`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_dealloc`.
 */
struct sp_Packet *sp_packet_clone(const struct sp_Packet *this_);
/**
 * Deallocates a `Packet`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `Packet`
 * - `this` is not used concurrently or after this call
 */
void sp_packet_dealloc(struct sp_Packet *this_);
/**
 * Turns a `Command` into a `Packet`.
 * The `Command` gets consumed.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `command` points to a valid instance of `Command`
 * - `command` is not used concurrently or after this call
 * - the returned `Packet` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_dealloc`.
 */
struct sp_Packet *sp_packet_from_command(struct sp_CCommand *command);
/**
 * Tries to load a `Packet` from the passed array with the specified length.
 *
 * returns: NULL in case of an error, pointer to the allocated packet otherwise
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory region of at least `length` bytes
 * - `data` is not written to concurrently
 * - the returned `Packet` instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_packet_dealloc`.
 */
struct sp_Packet *sp_packet_try_load(const uint8_t *data,
                                     size_t length);
/**
 * Clones a `PixelGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `PixelGrid`
 * - `this` is not written to concurrently
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_pixel_grid_dealloc`.
 */
struct sp_PixelGrid *sp_pixel_grid_clone(const struct sp_PixelGrid *this_);
/**
 * Deallocates a `PixelGrid`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `PixelGrid`
 * - `this` is not used concurrently or after this call
 * - `this` was not passed to another consuming function, e.g. to create a `Command`
 */
void sp_pixel_grid_dealloc(struct sp_PixelGrid *this_);
/**
 * Gets the current value at the specified position in the `PixelGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to read from
 * - `x` and `y`: position of the cell to read
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `PixelGrid`
 * - `this` is not written to concurrently
 */
bool sp_pixel_grid_get(const struct sp_PixelGrid *this_, size_t x, size_t y);
/**
 * Loads a `PixelGrid` with the specified dimensions from the provided data.
 *
 * # Arguments
 *
 * - `width`: size in pixels in x-direction
 * - `height`: size in pixels in y-direction
 *
 * returns: `PixelGrid` that contains a copy of the provided data
 *
 * # Panics
 *
 * - when the dimensions and data size do not match exactly.
 * - when the width is not dividable by 8
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `data` points to a valid memory location of at least `data_length` bytes in size.
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_pixel_grid_dealloc`.
 */
struct sp_PixelGrid *sp_pixel_grid_load(size_t width,
                                        size_t height,
                                        const uint8_t *data,
                                        size_t data_length);
/**
 * Creates a new `PixelGrid` with the specified dimensions.
 *
 * # Arguments
 *
 * - `width`: size in pixels in x-direction
 * - `height`: size in pixels in y-direction
 *
 * returns: `PixelGrid` initialized to all pixels off
 *
 * # Panics
 *
 * - when the width is not dividable by 8
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_pixel_grid_dealloc`.
 */
struct sp_PixelGrid *sp_pixel_grid_new(size_t width,
                                       size_t height);
/**
 * Sets the value of the specified position in the `PixelGrid`.
 *
 * # Arguments
 *
 * - `this`: instance to write to
 * - `x` and `y`: position of the cell
 * - `value`: the value to write to the cell
 *
 * returns: old value of the cell
 *
 * # Panics
 *
 * When accessing `x` or `y` out of bounds.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `PixelGrid`
 * - `this` is not written to or read from concurrently
 */
void sp_pixel_grid_set(struct sp_PixelGrid *this_,
                       size_t x,
                       size_t y,
                       bool value);