crates/servicepoint_binding_cs/ServicePoint/BindGen/ServicePoint.g.cs


        /// <summary>
        ///  Sets the value of the specified position in the `Cp437Grid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `x` and `y`: position of the cell
        ///  - `value`: the value to write to the cell
        ///
        ///  returns: old value of the cell
        ///
        ///  # Panics
        ///
        ///  When accessing `x` or `y` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `BitVec`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_cp437_grid_set(Cp437Grid* @this, nuint x, nuint y, byte value);

        /// <summary>
        ///  Sets the value of all cells in the `Cp437Grid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `value`: the value to set all cells to
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_fill", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_cp437_grid_fill(Cp437Grid* @this, byte value);

        /// <summary>
        ///  Gets the width of the `Cp437Grid` instance.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp_cp437_grid_width(Cp437Grid* @this);

        /// <summary>
        ///  Gets the height of the `Cp437Grid` instance.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_height", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp_cp437_grid_height(Cp437Grid* @this);

        /// <summary>
        ///  Gets an unsafe reference to the data of the `Cp437Grid` instance.
        ///
        ///  ## Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Cp437Grid`
        ///  - the returned memory range is never accessed after the passed `Cp437Grid` has been freed
        ///  - the returned memory range is never accessed concurrently, either via the `Cp437Grid` or directly
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_cp437_grid_unsafe_data_ref", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern ByteSlice sp_cp437_grid_unsafe_data_ref(Cp437Grid* @this);

        /// <summary>
        ///  Turns a `Command` into a `Packet`.
        ///  The `Command` gets consumed.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `command` points to a valid instance of `Command`
        ///  - `command` is not used concurrently or after this call
        ///  - the returned `Packet` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_packet_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_packet_from_command", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Packet* sp_packet_from_command(Command* command);

        /// <summary>
        ///  Tries to load a `Packet` from the passed array with the specified length.
        ///
        ///  returns: NULL in case of an error, pointer to the allocated packet otherwise
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `data` points to a valid memory region of at least `length` bytes
        ///  - `data` is not written to concurrently
        ///  - the returned `Packet` instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_packet_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_packet_try_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Packet* sp_packet_try_load(byte* data, nuint length);

        /// <summary>
        ///  Clones a `Packet`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Packet`
        ///  - `this` is not written to concurrently
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_packet_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_packet_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern Packet* sp_packet_clone(Packet* @this);

        /// <summary>
        ///  Deallocates a `Packet`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `Packet`
        ///  - `this` is not used concurrently or after this call
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_packet_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_packet_dealloc(Packet* @this);

        /// <summary>
        ///  Creates a new `PixelGrid` with the specified dimensions.
        ///
        ///  # Arguments
        ///
        ///  - `width`: size in pixels in x-direction
        ///  - `height`: size in pixels in y-direction
        ///
        ///  returns: `PixelGrid` initialized to all pixels off
        ///
        ///  # Panics
        ///
        ///  - when the width is not dividable by 8
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_pixel_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp_pixel_grid_new(nuint width, nuint height);

        /// <summary>
        ///  Loads a `PixelGrid` with the specified dimensions from the provided data.
        ///
        ///  # Arguments
        ///
        ///  - `width`: size in pixels in x-direction
        ///  - `height`: size in pixels in y-direction
        ///
        ///  returns: `PixelGrid` that contains a copy of the provided data
        ///
        ///  # Panics
        ///
        ///  - when the dimensions and data size do not match exactly.
        ///  - when the width is not dividable by 8
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `data` points to a valid memory location of at least `data_length` bytes in size.
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_pixel_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp_pixel_grid_load(nuint width, nuint height, byte* data, nuint data_length);

        /// <summary>
        ///  Clones a `PixelGrid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `PixelGrid`
        ///  - `this` is not written to concurrently
        ///  - the returned instance is freed in some way, either by using a consuming function or
        ///    by explicitly calling `sp_pixel_grid_dealloc`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp_pixel_grid_clone(PixelGrid* @this);

        /// <summary>
        ///  Deallocates a `PixelGrid`.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `PixelGrid`
        ///  - `this` is not used concurrently or after this call
        ///  - `this` was not passed to another consuming function, e.g. to create a `Command`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_pixel_grid_dealloc(PixelGrid* @this);

        /// <summary>
        ///  Gets the current value at the specified position in the `PixelGrid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to read from
        ///  - `x` and `y`: position of the cell to read
        ///
        ///  # Panics
        ///
        ///  When accessing `x` or `y` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `PixelGrid`
        ///  - `this` is not written to concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool sp_pixel_grid_get(PixelGrid* @this, nuint x, nuint y);

        /// <summary>
        ///  Sets the value of the specified position in the `PixelGrid`.
        ///
        ///  # Arguments
        ///
        ///  - `this`: instance to write to
        ///  - `x` and `y`: position of the cell
        ///  - `value`: the value to write to the cell
        ///
        ///  returns: old value of the cell
        ///
        ///  # Panics
        ///
        ///  When accessing `x` or `y` out of bounds.
        ///
        ///  # Safety
        ///
        ///  The caller has to make sure that:
        ///
        ///  - `this` points to a valid `PixelGrid`
        ///  - `this` is not written to or read from concurrently
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sp_pixel_grid_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp_pixel_grid_set(PixelGrid* @this, nuint x, nuint y, [MarshalAs(UnmanagedType.U1)] bool value);
